# fsdr-cli

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  REFACTO.md  check.sh  config.toml  test.grc
.devcontainer/: Dockerfile
.github/workflows/: ci.yml  release.yml
agent_docs/: architecture.md  conventions.md  testing_guidelines.md
fsdr-cli-macros/: Cargo.toml
fsdr-cli-macros/src/: lib.rs
fsdr-cli-macros/tests/: test_macros.rs
gnuradio/: clipdetect_ff.block.yml  dsb.block.yml  dump_c.block.yml  dump_f.block.yml  dump_u8.block.yml  octave_complex_c.block.yml  pattern_search.block.yml  satellites_kiss_client_source.block.yml  timing_recovery.block.yml  weaver_lsb_cf.block.yml  weaver_usb_cf.block.yml
src/: cmd_grammar.rs  cmd_line.pest  cmd_line.rs  csdr.rs  grc_cmd.rs  iqengine_blockconverter.rs  iqengine_cmd.rs  iqengine_plugin.rs  iqengine_userdef.rs  lib.rs  main.rs
src/blocks/: audio_sink.rs  dcblocker.rs  dsb.rs  fixedlen_to_pdu.rs  kiss_file_sink.rs  kiss_file_source.rs  mod.rs  octave_complex.rs  pattern_search.rs  tcp_kiss_client.rs  tcp_kiss_server.rs  timingrecovery.rs
src/blocks/modulators/: constellation.rs  mod.rs
src/blocks/synchronizers/: clock_tracking_loop.rs  mod.rs  symbol_sync.rs  ted_mueller_and_muller.rs  timing_error_detector.rs  timing_recovery.rs
src/csdr_cmd/: agc_cmd.rs  amdemod_cmd.rs  audio_cmd.rs  bandpass_fir_fft_cmd.rs  binary_slicer.rs  clipdetect_cmd.rs  cmd.rs  convert_cmd.rs  deemphasis_nfm_ff_cmd.rs  deemphasis_wfm_ff_cmd.rs  dsb_cmd.rs  dump_cmd.rs  eval_cmd.rs  fastdcblock_cmd.rs  fir_decimate_cmd.rs  fixedlen_to_pdu_cmd.rs  fmdemod_quadri_cmd.rs  fractional_decimator_cmd.rs  gain_cmd.rs  limit_cmd.rs  load_cmd.rs  load_kiss_cmd.rs  mod.rs  octave_complex_cmd.rs  pack_bits_cmd.rs  pattern_search_cmd.rs  rational_resampler_cmd.rs  realpart_cmd.rs  save_kiss_cmd.rs  shift_addition_cmd.rs  tcp_kiss_client_cmd.rs  tcp_kiss_server_cmd.rs  throttle_cmd.rs  timing_recovery_cmd.rs  weaver_cmd.rs  zmq_sink_cmd.rs  zmq_src_cmd.rs
src/grc/: backend.rs  builder.rs  converter.rs  converter_helper.rs  mod.rs  parser.rs
src/grc/converter/: analog_agc_xx.rs  analog_fm_deemph.rs  analog_nfm_deemph.rs  analog_quadrature_demod.rs  analog_rail_ff.rs  audio_sink.rs  band_pass_filter.rs  blocks_add_const_vxx.rs  blocks_complex_to_mag.rs  blocks_complex_to_real.rs  blocks_deinterleave.rs  blocks_file_sink.rs  blocks_file_source.rs  blocks_float_to_complex.rs  blocks_freqshift_cc.rs  blocks_multiply_const_vxx.rs  blocks_null_sink.rs  blocks_pack_k_bits.rs  blocks_throttle.rs  clipdetect_ff.rs  convert.rs  dc_bloker_xx.rs  deemphasis_nfm_ff.rs  digital_binary_slicer.rs  dsb.rs  dump.rs  fir_filter_xx.rs  low_pass_filter.rs  mod.rs  octave_complex_c.rs  pattern_search.rs  rational_resampler_xxx.rs  realpart_cf.rs  satellites_fixedlen_to_pdu.rs  satellites_kiss_client_source.rs  satellites_kiss_file_sink.rs  satellites_kiss_file_source.rs  satellites_kiss_server_sink.rs  timing_recovery.rs  weaver_ssb.rs  (+2 more)
tests/: am-demodulation.grc  chain1.grc  chain3.grc  codegen.rs  csdr.rs  grc_parse.rs  grc_roundtrip.rs  grc_run.rs  hackrf-wfm.grc  kiss_example.grc  kiss_file_sink.rs  kiss_file_source.rs  nfm.grc  pattern_search.rs  realpart_cf.grc  ssb-decoder.grc  tcp_kiss.rs  test.kiss
