[package]
name = "fsdr-cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/loic-fejoz/fsdr-cli/"
homepage = "https://fsdr-cli.github.io"
description = "`fsdr` is a command line tool to carry out DSP tasks for Software Defined Radio. It comes as a replacement of `csdr`."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
audio = ["futuresdr/audio"]

[dependencies]
futuresdr = { git="https://github.com/FutureSDR/FutureSDR", version = "0.0", features=['audio']}
async-trait = "0.1.52"
fsdr-blocks = { git="https://github.com/FutureSDR/fsdr-blocks", version="0.1"}
#fsdr-blocks = { path="../fsdr-blocks" }
serde_yaml = "0.9.17"
serde = {version="1.0.152", features=["derive"]}

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.5"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin", "armv7-unknown-linux-gnueabihf"]
