[package]
name = "fsdr-cli"
version = "0.1.0+202306030813-alpha"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/loic-fejoz/fsdr-cli/"
homepage = "https://fsdr-cli.github.io"
description = "`fsdr-cli` is a command line tool to carry out DSP tasks for Software Defined Radio. It also comes as a replacement of `csdr`."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
audio = ["futuresdr/audio"]

[dependencies]
# futuresdr = { version = "0.0", features=['audio']}
# futuresdr = { path="../FutureSDR", features=['audio']}
# futuresdr = {  git = "https://github.com/FutureSDR/FutureSDR", features=['audio']}
futuresdr = { git = "https://github.com/FutureSDR/FutureSDR", branch = "main", features=['audio', 'zeromq']}

async-trait = "0.1.52"
cpal = { version = "0.15.2"}
# fsdr-blocks = {  version="0.1"}
# fsdr-blocks = { path="../fsdr-blocks" }
fsdr-blocks = { git = "https://github.com/FutureSDR/fsdr-blocks", branch = "main" }
futures = "0.3.26"
serde_yaml = "0.9.17"
serde = {version="1.0.152", features=["derive"]}
pest = "2.0"
pest_derive = "2.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.5"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin", "armv7-unknown-linux-gnueabihf"]
