
[package]
name = "fsdr-cli"
version = "0.1.0+202406281158-alpha"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/loic-fejoz/fsdr-cli/"
homepage = "https://fsdr-cli.github.io"
description = "`fsdr-cli` is a command line tool to carry out DSP tasks for Software Defined Radio. It also comes as a replacement of `csdr`."
authors=["Loïc Fejoz <loic@fejoz.net>"]

[package.metadata.wix]

upgrade-guid = "DE2DF6DA-AD53-48D5-A4B2-F4020ECC3592"
path-guid = "66D9F37F-A1D4-44C6-B9B1-508B9CEF4577"
license = false
eula = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default=['iqengine']
audio =  [] #["futuresdr/audio"]
iqengine = [ 'dep:axum', 'dep:http', 'dep:tokio', 'dep:tower', 'dep:tower-http', 'dep:iqengine-plugin', 'dep:serde_derive', 'dep:simple_logger']

[dependencies]
# futuresdr = { version = "0.0", features=['audio']}
# futuresdr = { path="../FutureSDR", features=['audio']}
# futuresdr = {  git = "https://github.com/FutureSDR/FutureSDR", features=['audio']}
futuresdr = { git = "https://github.com/FutureSDR/FutureSDR", branch = "main", features=['audio']}

async-trait = "0.1"
cpal = { version = "0.15.2"}
# fsdr-blocks = {  version="0.1"}
# fsdr-blocks = { path="../fsdr-blocks" }
fsdr-blocks = { git = "https://github.com/FutureSDR/fsdr-blocks", branch = "main" }
futures = "0.3.26"
serde_yaml = "0.9.17"
serde = {version="1.0.152", features=["derive"]}
pest = "2.0"
pest_derive = "2.0"
anyhow = "1.0.102"

# iqengine-plugin = {path="../iqengine-plugin-rs", optional = true  }
iqengine-plugin = { git = "https://github.com/loic-fejoz/iqengine-plugin-rs/", branch = "main", optional = true   }
axum = {version = "0.7.4", features = ["macros"], optional = true  }
http = {version="1.0.0", optional = true }
serde_derive = {version="1.0.190", optional = true }
simple_logger = {version="4.2.0", optional = true }
tokio = { version = "1.33.0", features = ["full"], optional = true }
tower = {version="0.4.13", optional = true }
tower-http = { version = "0.5.2", features = ["cors"], optional = true  }
itertools = "0.14.0"
fsdr-cli-macros = { path = "fsdr-cli-macros" }
quote = "1.0"
proc-macro2 = "1.0"
num-traits = "0.2"

[profile.release]
codegen-units = 1
debug = true
lto = "fat"
opt-level = 3
panic = "abort"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "fat"

# Config for 'cargo dist'
[workspace]
members = [
    "fsdr-cli-macros"
]

[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.17.0"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.78.0-nightly"
# CI backends to support
ci = "github"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["armv7-unknown-linux-gnueabihf", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# The installers to generate for each app
installers = ["shell", "msi"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
