[package]
name = "fsdr-cli-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "fold"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
futuresdr = { git = "https://github.com/FutureSDR/FutureSDR", branch = "main" }
num-complex = "0.4"
